Summarizing table compiler; template substitution in k.IM